# jsi

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pr.yml  release.yml
examples/: bad.smt2  easy-sat.smt2  sat-large-model.smt2  unsat-bvurem.smt2  unsat-div.smt2
jsi-client-rs/: Cargo.toml
jsi-client-rs/src/: main.rs
src/jsi/: __init__.py  __main__.py  cli.py  client.py  core.py  logic.py  server.py  supervisor.py  utils.py
src/jsi/config/: definitions.json  loader.py  solvers.json
src/jsi/output/: basic.py  fancy.py
tests/: test_basic.py  test_cli.py  test_process_control.py
