[project]
name = "jsi"
dynamic = ["version"]
description = "just solve it - a command line tool to run multiple SMT (Satisfiability Modulo Theories) solvers in parallel"
authors = [
    { name = "karmacoma", email = "karma@a16z.com" }
]
dependencies = [
    "click>=8.1.7",
    "pyright>=1.1.378",
    "rich>=13.8.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
jsi = 'jsi:main'

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true

# switch to true to generate cross-platform lockfiles when we support Windows
# which we don't
universal = false

dev-dependencies = [
    "pyright>=1.1.377",
    "pytest>=8.3.2",
]

[tool.pdm.version]
source = "scm"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
	"A",  # warn about shadowing built-ins
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "SIM",# flake8-simplify
    "I",  # isort
    "N",    # naming
    "W",    # warnings
]

[tool.ruff.lint.isort]
known-first-party = ["jsi"]

[tool.pyright]
venvPath = "."          # rye installs the venv in the current dir
venv = ".venv"          #       in a folder called `.venv`
strict = ["**/*.py"]    # use 'strict' checking on all files
pythonVersion = "3.11"

[tool.rye.scripts]
fmt = "rye fmt"
lint = "rye lint --fix"
check = "pyright"
test = "rye test"
all = { chain = ["fmt", "lint", "check", "test"] }

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
